--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <p>Marketing</p>
     </li>
     <li>
-      <img src="/images/ourteam/blackt-shirt.jpg" alt="black t-shirt" width="150"/>
+      <img src="./images/ourteam/blackt-shirt.jpg" alt="black t-shirt" width="150"/>
       <h3>Михаил Ермаков</h3>
       <p>UI Designer</p>
     </li>
