--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   <section>
   <h2>Чем мы занимаемся</h2>
     <ul>
-      <li><img src="/images/whatwearedoing/print.jpg" alt="print" width="150"></li>
-      <li><img src="/images/whatwearedoing/call.jpg" alt="call" width="150"></li>
-      <li><img src="/images/whatwearedoing/staring.jpg" alt="staring" width="150"></li>
+      <li><img src="./images/whatwearedoing/print.jpg" alt="print" width="150"></li>
+      <li><img src="./images/whatwearedoing/call.jpg" alt="call" width="150"></li>
+      <li><img src="./images/whatwearedoing/staring.jpg" alt="staring" width="150"></li>
     </ul>
   </section>
 <!--Наша команда-->
@@ -68,17 +68,17 @@
 <h2>Наша команда</h2>
   <ul>
     <li>
-      <img src="/images/ourteam/glassesman.jpg" alt="glasse sman" width="150"/>
+      <img src="./images/ourteam/glassesman.jpg" alt="glasse sman" width="150"/>
       <h3>Игорь Демьяненко</h3>
       <p>Product Designer</p>
     </li>
     <li>
-      <img src="/images/ourteam/glassesgirl.jpg" alt="glasses girl" width="150"/>
+      <img src="./images/ourteam/glassesgirl.jpg" alt="glasses girl" width="150"/>
       <h3>Ольга Репина</h3>
       <p>Frontend Developer</p>
     </li>
     <li>
-      <img src="/images/ourteam/whiteshirt.jpg" alt="white shirt" width="150"/>
+      <img src="./images/ourteam/whiteshirt.jpg" alt="white shirt" width="150"/>
       <h3>Николай Тарасов</h3>
       <p>Marketing</p>
     </li>
